[package]
name = "shekyl-crypto-pq"
description = "Post-quantum cryptographic primitives for Shekyl (ML-DSA, ML-KEM, hybrid signatures)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
helioselene = { path = "../shekyl-oxide/crypto/helioselene" }
ciphersuite = "0.4"
curve25519-dalek = "4"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
fips204 = "0.4.6"
# Pinned exact: fips203 uses DummyRng::fill_bytes = unimplemented!() internally;
# a minor-version bump could panic at runtime. Exact pin + KEM_DERIVE_V1_KAT.json
# tripwire + Cargo.lock = three layers of defense against silent behavior changes.
fips203 = "=0.4.3"
hkdf = "0.12"
sha2 = "0.10"
blake2 = "0.10"
# BIP-39 (English) mnemonic <-> entropy conversion and PBKDF2-HMAC-SHA512 seed
# derivation. We depend on rust-bitcoin's crate for its battle-tested handling
# of NFKD, checksum, and PBKDF2; the canonical English wordlist is additionally
# pinned by a KAT (see tests::bip39_english_wordlist_sha256_matches_canonical)
# which fails closed on any upstream drift.
#
# The `rand` feature would pull a transitive `rand` dependency; we do not use
# random-mnemonic generation (all entropy flows through OsRng in our own FFI)
# so we keep the feature set minimal.
#
# The `zeroize` feature derives `Zeroize` + `ZeroizeOnDrop` on `Mnemonic` and
# `Seed` (gated upstream by `#[cfg_attr(feature = "zeroize", derive(...))]`),
# so the mnemonic entropy and the 64-byte BIP-39 seed are wiped on drop per
# `35-secure-memory.mdc`'s structural-memwipe rule. Required by every wallet
# creation/restore path that materializes seed bytes (Phase 0 Mission Audit
# Lens D D-9).
#
# The `unicode-normalization` feature gates the NFKD normalization that
# BIP-0039 §A requires on mnemonic phrases and passphrases. The entry
# points we use (`Mnemonic::parse_in`, `Mnemonic::parse`, `Mnemonic::to_seed`)
# are each `#[cfg(feature = "unicode-normalization")]`-gated at the function
# declaration in `bip39-2.2.2/src/lib.rs` (lines 520, 531, 561 respectively);
# without the feature they are absent from the API entirely. The non-gated
# alternatives (`parse_in_normalized`, `parse_normalized`, `to_seed_normalized`
# at lines 437, 514, 550) trust the caller to pass NFKD-normalized input and
# apply no Unicode work themselves.
#
# The feature is currently pulled in transitively via the
# `std -> alloc -> unicode-normalization` chain in `bip39-2.2.2/Cargo.toml`,
# but it is **explicitly pinned here** as defense-in-depth. Two distinct
# failure modes are relevant:
#
#   1. **Pin removed and the transitive chain breaks.** The consumer site
#      in `shekyl-crypto-pq/src/bip39.rs` calls `Mnemonic::parse_in` and
#      `Mnemonic::to_seed`; with the feature off, both functions disappear
#      from the API and the crate fails to compile. Loud failure, easy to
#      catch. The explicit pin closes this mode.
#   2. **Pin survives but the consumer migrates to a non-gated entry
#      point without adding an NFKD pre-pass.** A future refactor that
#      swaps `parse_in` for `parse_in_normalized` (e.g., to elide the
#      upstream `Cow` allocation) silently produces non-spec-compliant
#      behaviour on non-ASCII passphrases: two byte-different but
#      logically-equivalent Unicode forms then produce different
#      wallets. The feature pin does **not** catch this mode; the
#      regression test
#      `shekyl-crypto-pq/src/bip39.rs::tests::nfkd_passphrase_normalization`
#      does, by feeding NFC and NFKD forms of the same passphrase through
#      our consumer entry points and asserting byte-identical seeds.
#
# See `ELECTRUM_WORDS_REMOVAL.md` §4.7 #6 for the discipline statement;
# the test is the load-bearing enforcement of that discipline.
bip39 = { version = "2.2.2", default-features = false, features = ["std", "zeroize", "unicode-normalization"] }
shekyl-address = { path = "../shekyl-address" }
# `zeroize` feature activates `Sha3State: ZeroizeOnDrop` (sha3 0.10.9+)
# so the cSHAKE / SHA-3 sponge state is wiped on drop. Required by the
# `derive_output_handle` cSHAKE256 invocation per
# `STAGE_1_PR_3_KEY_ENGINE.md` §7.12 and `35-secure-memory.mdc`'s
# structural-memwipe rule. The Zeroize impl lives on sha3's private
# `Sha3State`; wipe-on-drop reaches public types (`CShake256`, etc.)
# via Drop-glue cascade through their `Sha3State` field.
sha3 = { version = "0.10", features = ["zeroize"] }
# Wallet-file envelope (WALLET_FILE_FORMAT_V1).
#
# Argon2id is the OWASP 2024 recommended password-stretching primitive; we
# use it for the wrapped_kek layer so an attacker with a stolen .wallet.keys
# file must pay Argon2id's memory-hardness to brute-force the wrapping
# password. Features `alloc` enables the `Vec<u8>`-returning helpers; we
# don't use `password-hash` (PHC string format) because we embed our own
# KDF parameters in the wallet file header rather than in an external
# phc-string.
#
# The `zeroize` feature activates `impl Zeroize for Block`, wiping the
# Argon2id working buffer (64 MiB at our parameter choice) on drop rather
# than leaving password-derived material resident in process memory until
# allocator reuse or process exit. Required per `35-secure-memory.mdc`'s
# structural-memwipe rule on every wallet open/close cycle (Phase 0 Mission
# Audit Lens D D-10).
argon2 = { version = "0.5", default-features = false, features = ["alloc", "zeroize"] }
# XChaCha20-Poly1305 AEAD with a 192-bit nonce (chosen so per-write random
# nonces are collision-safe for the entire lifetime of a wallet file).
# Used for:
#   - the wrap AEAD that encrypts file_kek under the Argon2id-derived wrap_key
#   - the region 1 AEAD under HKDF(file_kek, "shekyl-region1-aead-v1")
#   - the region 2 AEAD under HKDF(file_kek, "shekyl-region2-aead-v1" || addr)
# All three AEADs use the same primitive; the distinctions are (key, nonce,
# AAD) tuples, never the cipher.
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
shekyl-crypto-hash = { path = "../shekyl-crypto-hash" }
shekyl-generators = { path = "../shekyl-oxide/shekyl-oxide/generators" }
# `keccak256_to_scalar` for the classical Edwards-curve component of Shekyl
# subaddress derivation (`crate::subaddress`), relocated from `shekyl-scanner`
# per `STAGE_1_PR_3_KEY_ENGINE.md` Commit 4a so the path from KeyEngine trait
# surface to the cryptographic primitive is stateless end-to-end (no
# intermediate `ViewPair` state-bearing object). The derivation is
# Shekyl-genesis-locked; the structural similarity to upstream Monero's
# subaddress derivation is intentional but is not a Monero-compatibility
# shim — see `crate::subaddress`'s "Classical Edwards-curve, not
# classical-Monero" section and `60-no-monero-legacy.mdc`.
shekyl-primitives = { path = "../shekyl-oxide/shekyl-oxide/primitives" }
# Typed wallet-state JSON ser/des (WALLET_FILE_FORMAT_V1 region 2). Versioned
# by `state_schema_version`; mismatched version refuses to load, never silently
# migrates. JSON field names are the wire format; see wallet_state.rs.
serde_json = "1"

# Postcard schema reflection for `HybridCiphertext` and `OutputHandle`.
# `STAGE_1_PR_3_M3B_PREFLIGHT.md` §2 D3 (disposition α, confirmed
# 2026-05-08): rather than mirror these workspace-owned types in
# `shekyl-engine-state`'s `TransferDetailsSchema`, derive `Schema` directly
# on the types here so the mirror references them as themselves. Same pin
# as `shekyl-engine-state`'s direct-dep (`0.2`, derive + use-std). Adds
# zero new third-party crates to the transitive tree (proc-macro2 / quote
# / syn are already pulled in via `serde_derive` / `thiserror` /
# `zeroize_derive`).
postcard-schema = { version = "0.2", default-features = false, features = ["derive", "use-std"] }

[dev-dependencies]
hex = "0.4"
shekyl-fcmp = { path = "../shekyl-fcmp" }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "pqc_rederivation"
harness = false

[lints]
workspace = true
