[package]
name = "shekyl-daemon-rpc"
description = "Rust daemon RPC server over C++ core_rpc_server via FFI"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "shekyl_daemon_rpc"
crate-type = ["staticlib", "lib"]

[dependencies]
serde = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "limit"] }
tracing = "0.1"
