[package]
name = "shekyl-economics-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Eight-scenario economics simulation harness for DESIGN_CONCEPTS parameter validation"

[dependencies]
shekyl-economics = { path = "../shekyl-economics" }
serde = { workspace = true }
serde_json = "1"
