[package]
name = "shekyl-economics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Three-component economic system: release rate, burn, staker rewards"
build = "build.rs"

[dependencies]
thiserror.workspace = true
serde.workspace = true

[build-dependencies]
serde_json = "1"
