[package]
name = "shekyl-economics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Four-component economic system: release rate, burn, emission share, staker rewards"
build = "build.rs"

[dependencies]
thiserror.workspace = true
serde.workspace = true

[build-dependencies]
serde_json = "1"

[lints]
workspace = true
