[package]
name = "shekyl-economics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Four-component economic system: release rate, burn, emission share, staker rewards"
build = "build.rs"

[dependencies]
thiserror.workspace = true
serde.workspace = true
# Blake2b-256 backs the `CalibrationStamp.params_digest` canonical
# parameter digest (`digest.rs`). `blake2 = "0.10"` is already a
# workspace dependency (BlakeGenerator in `shekyl-pow-randomx`); the
# digest uses the `Blake2b<U32>` fixed-output alias over the
# `digest::consts::U32` re-export. `default-features = false` keeps the
# `no_std`-friendly core (we only need `Digest`), matching the
# workspace pin.
blake2 = { workspace = true }

[build-dependencies]
serde_json = "1"

[lints]
workspace = true
