# Copyright (c) 2025-2026, The Shekyl Foundation
#
# All rights reserved.
# BSD-3-Clause

[package]
name = "shekyl-encoding"
description = "General-purpose Bech32m blob encoding for Shekyl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bech32 = "0.11"
thiserror.workspace = true
