[package]
name = "shekyl-engine-rpc"
description = "Rust engine RPC server over C++ wallet2 via FFI"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "shekyl_engine_rpc"
crate-type = ["lib", "staticlib"]

[[bin]]
name = "shekyl-engine-rpc"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
shekyl-logging = { path = "../shekyl-logging" }
clap = { version = "4", features = ["derive"] }
shekyl-scanner = { path = "../shekyl-scanner", optional = true }
shekyl-tx-builder = { path = "../shekyl-tx-builder", optional = true }
shekyl-engine-core = { path = "../shekyl-engine-core", optional = true }
shekyl-fcmp = { path = "../shekyl-fcmp", optional = true }
hex = { version = "0.4", optional = true }

[features]
default = []
rust-scanner = ["shekyl-scanner", "hex"]
native-sign = ["shekyl-tx-builder"]
multisig = ["shekyl-engine-core/multisig", "shekyl-fcmp/multisig", "hex"]
