# Copyright (c) 2025-2026, The Shekyl Foundation
#
# All rights reserved.
# BSD-3-Clause

[package]
name = "shekyl-fcmp"
description = "FCMP++ full-chain membership proofs with Shekyl PQC extensions (4-scalar leaf)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Upstream FCMP++ crates from Shekyl-Foundation fork (shekyl-oxide).
# The authoritative pin is `rust/Cargo.lock`.
# Use `branch = "fcmp++"` here; bump the lock when advancing the fork.
shekyl-fcmp-plus-plus = { git = "https://github.com/Shekyl-Foundation/monero-oxide", branch = "fcmp++", default-features = false, features = ["std", "compile-time-generators"] }
shekyl-generators = { git = "https://github.com/Shekyl-Foundation/monero-oxide", branch = "fcmp++" }
helioselene = { git = "https://github.com/Shekyl-Foundation/monero-oxide", branch = "fcmp++" }
dalek-ff-group = "0.5"
ciphersuite = "0.4"
ec-divisors = { git = "https://github.com/Shekyl-Foundation/monero-oxide", branch = "fcmp++", features = ["ed25519"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }

# Crypto primitives
blake2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand_core = { version = "0.6", features = ["std"] }

thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
rand = "0.8"

[features]
default = ["std"]
std = []
