# Copyright (c) 2025-2026, The Shekyl Foundation
#
# All rights reserved.
# BSD-3-Clause

[package]
name = "shekyl-fcmp"
description = "FCMP++ full-chain membership proofs with Shekyl PQC extensions (4-scalar leaf)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Vendored shekyl-oxide crates (tracked upstream in Shekyl-Foundation/monero-oxide).
shekyl-fcmp-plus-plus = { path = "../shekyl-oxide/shekyl-oxide/fcmp/fcmp++", default-features = false, features = ["std", "compile-time-generators"] }
shekyl-generators = { path = "../shekyl-oxide/shekyl-oxide/generators" }
helioselene = { path = "../shekyl-oxide/crypto/helioselene" }
generalized-bulletproofs = { path = "../shekyl-oxide/crypto/generalized-bulletproofs" }
dalek-ff-group = "0.5"
ciphersuite = "0.4"
multiexp = "0.4"
ec-divisors = { path = "../shekyl-oxide/crypto/divisors", features = ["ed25519"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }

# Crypto primitives
blake2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand_core = { version = "0.6", features = ["std"] }

thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
rand = "0.8"

[features]
default = ["std"]
std = []
