# Copyright (c) 2025-2026, The Shekyl Foundation
#
# All rights reserved.
# BSD-3-Clause

[package]
name = "shekyl-fcmp"
description = "FCMP++ full-chain membership proofs with Shekyl PQC extensions (4-scalar leaf)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Vendored shekyl-oxide crates (tracked upstream in Shekyl-Foundation/monero-oxide).
shekyl-fcmp-plus-plus = { path = "../shekyl-oxide/shekyl-oxide/fcmp/fcmp++", default-features = false, features = ["std", "compile-time-generators"] }
shekyl-generators = { path = "../shekyl-oxide/shekyl-oxide/generators" }
helioselene = { path = "../shekyl-oxide/crypto/helioselene" }
generalized-bulletproofs = { path = "../shekyl-oxide/crypto/generalized-bulletproofs" }
dalek-ff-group = "0.5"
ciphersuite = "0.4"
multiexp = "0.4"
ec-divisors = { path = "../shekyl-oxide/crypto/divisors", features = ["ed25519"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }

# Crypto primitives
blake2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand_core = { version = "0.6", features = ["std"] }

# FROST multisig (optional)
transcript = { package = "flexible-transcript", version = "0.3", features = ["recommended"], optional = true }
modular-frost = { version = "0.11", features = ["ed25519"], optional = true }
dkg-pedpop = { version = "0.6", optional = true }
rand_chacha = { version = "0.3", optional = true }

tracing = "0.1"
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
rand = "0.8"
modular-frost = { version = "0.11", features = ["ed25519", "tests"] }
dkg-pedpop = "0.6"
transcript = { package = "flexible-transcript", version = "0.3", features = ["recommended"] }
rand_chacha = "0.3"

[features]
default = ["std"]
std = []
multisig = ["shekyl-fcmp-plus-plus/multisig", "transcript", "modular-frost", "dkg-pedpop", "rand_chacha"]

[lints]
workspace = true
