[package]
name = "shekyl-ffi"
description = "FFI bridge between C++ Monero core and Rust modules"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "shekyl_ffi"
crate-type = ["staticlib"]

[dependencies]
shekyl-crypto-pq = { path = "../shekyl-crypto-pq" }
shekyl-address = { path = "../shekyl-address" }
shekyl-encoding = { path = "../shekyl-encoding" }
shekyl-fcmp = { path = "../shekyl-fcmp", features = ["multisig"] }
shekyl-crypto-hash = { path = "../shekyl-crypto-hash" }
shekyl-consensus = { path = "../shekyl-consensus" }
shekyl-economics = { path = "../shekyl-economics" }
shekyl-staking = { path = "../shekyl-staking" }
shekyl-tx-builder = { path = "../shekyl-tx-builder" }
rcgen = "0.14"
serde_json = "1"
zeroize = "1"
libc = "0.2"
dalek-ff-group = "0.5"
ciphersuite = "0.4"
