[package]
name = "shekyl-ffi"
description = "FFI bridge between C++ Monero core and Rust modules"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "shekyl_ffi"
crate-type = ["staticlib"]

[features]
default = []
multisig = ["shekyl-fcmp/multisig", "modular-frost"]
debug-verify = []

[dependencies]
shekyl-chacha = { path = "../shekyl-chacha" }
shekyl-crypto-pq = { path = "../shekyl-crypto-pq" }
shekyl-address = { path = "../shekyl-address" }
shekyl-encoding = { path = "../shekyl-encoding" }
shekyl-fcmp = { path = "../shekyl-fcmp" }
shekyl-generators = { path = "../shekyl-oxide/shekyl-oxide/generators" }
shekyl-crypto-hash = { path = "../shekyl-crypto-hash" }
shekyl-consensus = { path = "../shekyl-consensus" }
shekyl-economics = { path = "../shekyl-economics" }
shekyl-staking = { path = "../shekyl-staking" }
shekyl-proofs = { path = "../shekyl-proofs" }
shekyl-tx-builder = { path = "../shekyl-tx-builder" }
curve25519-dalek = "4"
rcgen = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1"
libc = "0.2"
dalek-ff-group = "0.5"
ciphersuite = "0.4"
modular-frost = { version = "0.11", features = ["ed25519"], optional = true }

[lints]
workspace = true
