[package]
name = "shekyl-ffi"
description = "FFI bridge between C++ Monero core and Rust modules"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "shekyl_ffi"
crate-type = ["staticlib", "rlib"]

[features]
default = []
multisig = ["shekyl-fcmp/multisig", "modular-frost"]

[dependencies]
shekyl-chacha = { path = "../shekyl-chacha" }
shekyl-crypto-pq = { path = "../shekyl-crypto-pq" }
shekyl-address = { path = "../shekyl-address" }
shekyl-encoding = { path = "../shekyl-encoding" }
shekyl-fcmp = { path = "../shekyl-fcmp" }
shekyl-generators = { path = "../shekyl-oxide/shekyl-oxide/generators" }
shekyl-crypto-hash = { path = "../shekyl-crypto-hash" }
shekyl-consensus = { path = "../shekyl-consensus" }
shekyl-economics = { path = "../shekyl-economics" }
shekyl-staking = { path = "../shekyl-staking" }
shekyl-proofs = { path = "../shekyl-proofs" }
shekyl-tx-builder = { path = "../shekyl-tx-builder" }
curve25519-dalek = "4"
# OsRng for the testnet/fakechain raw-seed generation FFI. The feature set is
# minimal; we do not enable any of rand's derive or integration machinery.
rand = "0.8"
rcgen = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
zeroize = "1"
libc = "0.2"
dalek-ff-group = "0.5"
ciphersuite = "0.4"
modular-frost = { version = "0.11", features = ["ed25519"], optional = true }

[dev-dependencies]
hex = "0.4"
rand_core = { version = "0.6", features = ["std"] }
ec-divisors = { path = "../shekyl-oxide/crypto/divisors" }
multiexp = "0.4"
ciphersuite = "0.4"
helioselene = { path = "../shekyl-oxide/crypto/helioselene" }
shekyl-fcmp-plus-plus = { path = "../shekyl-oxide/shekyl-oxide/fcmp/fcmp++" }
shekyl-primitives = { path = "../shekyl-oxide/shekyl-oxide/primitives" }

[lints]
workspace = true
